--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,16 @@
 body {
     margin: 0;
-    font-family: 'Merriweather', serif;
+    font-family: Merriweather, serif;
     text-align: center;
 }
-.main-div
+/* .main-div
 {
    background-color: #e2ffff;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
 
-}
+} */
 
 
 .top-container {
@@ -33,17 +33,17 @@ body {
 }
 h1 {
     color: #66BFBF;
-    font-size: 3.5rem;
+    font-size: 5.5rem;
 
     font-family: Sacramento , cursive;
-    /* margin: 50 auto 0 auto; */
+    margin: 50 auto 0 auto;
     text-align: center;
-    margin-top: 80px;
+    /* margin-top: 80px; */
 }
 h2
 {
         color: #66BFBF;
-        font-family: Arial, Helvetica, sans-serif ;
+        font-family: Montserrat serif ;
         font-size: 2rem;
         padding-bottom: 10px;
         /* margin-top: 20px; */
@@ -82,13 +82,53 @@ hr{
     width: 4%;
     margin: 100px auto ;
 }
-
-
-
-
-
-
-.title-text
+.skill-row
 {
+     width: 50%;
+     margin: 100px auto 100px auto;
+     text-align: left;
+}
+.code-image
+{
+    width: 50%;
+    float: left;
+}
+h3{
+    color: #66BFBF;
+}
+.keeper-image
+{
+    width:25%;
+    float:right;
+}
 
+.btn
+{
+    background: #66BFBF;
+    border-radius: 8px;
+    font-family: Montserrat serif ;
+    color: white;
+    font-size: 15px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+.bottom-container
+{
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
+}
+a:hover
+{
+    color: #e5ffff;
+}
+a{
+    color:#237272;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+.copyright
+{
+    color: #e5ffff;
+    font-size: 0.75rem;
+    padding: 20px 0px;
 }
